// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Badge> to render properly 1`] = `
<span
  className="gds-badge foo-class gds-badge--inverse"
  style={
    {
      "width": "1000px",
    }
  }
>
  This is text
</span>
`;

exports[`Expect <Badge> to render properly with empty 1`] = `
<span
  className="gds-badge foo-class gds-badge--inverse gds-badge--empty"
  style={
    {
      "width": "1000px",
    }
  }
/>
`;
